cluster/apps/gitea/nginx-tailscale-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-tailscale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-tailscale
  template:
    metadata:
      labels:
        app: nginx-tailscale
    spec:
      containers:
        - name: tailscale
          image: tailscale/tailscale:stable
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          command:
            ["/usr/local/bin/tailscaled", "--state=/tmp/tailscaled.state"]
          args: ["--tun=userspace-networking"]

        - name: nginx
          image: nginx:latest
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          ports:
            - containerPort: 80
            - containerPort: 22

      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
