cluster/apps/gitea/ssh-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssh
spec:
  selector:
    app: gitea
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
    - port: 22
      targetPort: 2222
