cluster/apps/gitea/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-web-service
  namespace: gitea
spec:
  type: ClusterIP
  selector:
    app: gitea
  ports:
    - port: 3000
      targetPort: 3000
