cluster/apps/gitea/ssh-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ssh-ingress
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea-ssh-service
                port:
                  number: 2222
  tls:
    - hosts:
        - gitea-ssh
